fix spacing between post menu input fields

--- a/public/css/post-menu.css
+++ b/public/css/post-menu.css
@@ -11,7 +11,9 @@
   border-radius: 10px;
   background-color: var(--color-1);
   box-shadow: inset 0px 0px 10px var(--color-2);
+  gap: 1em;
 }
+
 
 #post-body {
   height: 90%;
